--- a/index.html
+++ b/index.html
@@ -858,5 +858,6 @@
 
     <!-- Główna aplikacja na końcu -->
     <script src="js/core/app.js"></script>
+    <script src="atanor-simple-fix.js"></script>
   </body>
 </html>
